Addition of the navigation bar.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <h1 class="logo__name">Moringa </h1>
     </div>
 </header>
+<div class="navbar">
+   
+    <a href="#Home" class="nav_item1">Home</a>
+    <a href="#About" class="nav_item">About</a>
+    <a href="#Services" class="nav_item">Services</a>  
+    <a href="#Contact" class="nav_item">Contact</a>
+    <a href="Moringa"class="nav_item5">MORINGA</a>
+
+</div>
 <body>
     
 </body>
