Addition of the head section text and service charter.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
 
 </div>
 <body>
+    <section class="section_main">
+        <h2 class="section__heading">Premium And Authentic<br>Traditional Food Restaurant<br>Welcome!
+        </h2>
+        <p>Order Now</p>
+    </section>
+
+    <section class="services">
+        <div class="service_eat">
+        <h3 class="service_title">Services</h3>
+        <p class="service_desc">Unique wood fired pizzas or be tempted by our pasta, antipasto, focaccias, salads and Bruschetta dishes.<br>
+        Relax in the friendly ambience as you enjoy the aromas of the wood ovens or sit al fresco and soak up the<br>
+        Mildura sunshine.</p>
+        
     
 </body>
 </html>
